@@ -1,10 +1,19 @@
+Thu Apr 16 18:13:01 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * XSC/utils/XML_Schema_Resolver.h:
+        * XSC/utils/XML_Schema_Resolver.cpp:
+
+          . Bug fix where the Path_Resolver object would segfault because
+            the vector was storing XStr objects instead of std::basic_string
+            objects.
+
 Wed Apr 15 03:54:36 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * XSC/utils/XML_Helper_T.cpp:
         * XSC/utils/XML_Schema_Resolver.h:
         * XSC/utils/XML_Schema_Resolver.cpp:
 
-	  . Fixed compilation errors on non-Windows systems.
+          . Fixed compilation errors on non-Windows systems.
 
 Mon Apr 13 21:59:24 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
